# NeRF.cpp

./: .gitignore  CMakeLists.txt  README.md
include/: nerf_model.h  renderer.h  siren_nerf.h  utils.h
src/: main.cpp  renderer.cpp  siren_nerf.cpp  utils.cpp
